Add/use property for first start distribution URL
* Add global property `application.distribution` (URL to current
  distribution.xml) and forward it to spring via application.properties.
* Replace static `InstallableDistributions.OFFICIAL_DISTRIBUTIONS_XML`
* Don't build a transitional URI just to convert it to URL.
* Change URL schema to HTTPS.
* Adjust test and add test for HTTPS schema.
* Minor beautification of logger call